# api/swagger.yaml
@@ -30,7 +30,8 @@ externalDocs:
 
 
 # host: "wasabi-neko.tw:3000"
-host: "localhost:3000"
+# host: "localhost:3000"
+host: "140.115.200.35:8281"
 basePath: "/api/v0"
 
 
@@ -68,6 +69,8 @@ paths:
       responses:
         200:
           description: "Successful operation"
+        401:
+          $ref: "#/responses/401"
 
   /tables:
     get:
@@ -83,6 +86,8 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/TableRecord"
+        401:
+          $ref: "#/responses/401"
 
     patch:
       tags:
@@ -95,6 +100,8 @@ paths:
       responses:
         200:
           description: "Successful operation"
+        401:
+          $ref: "#/responses/401"
 
   /tables/{tableID}:
     get:
@@ -110,6 +117,8 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/TableRecord"
+        401:
+          $ref: "#/responses/401"
         404:
           description: "Table not found"
 
@@ -125,8 +134,8 @@ paths:
       responses:
         200:
           description: "Successful operation"
-          schema:
-            $ref: "#/definitions/TableRecord"
+        401:
+          $ref: "#/responses/401"
         404:
           description: "Table not found"
 
@@ -171,6 +180,10 @@ parameters:
 
 
 responses:  # TODO: 401, 404
+  401:
+    description: "Unauthorized"
+    # schema:
+    #   type: "string"
 
 
 securityDefinitions:
